--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,6 @@ dist.jar=${dist.dir}/POS-System.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.itextpdf-5.4.0.jar=C:\\Program Files\\Java\\lib\\itextpdf-5.4.0.jar
 file.reference.mysql-connector-java-8.0.13.jar=E:\\CMJD77\\Extra\\mysql-connector-java-8.0.13.jar
 includes=**
 jar.compress=false
@@ -37,8 +36,7 @@ javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.mysql-connector-java-8.0.13.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.beans-binding.classpath}:\
-    ${file.reference.itextpdf-5.4.0.jar}
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
